--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -85,9 +85,11 @@ button{
 
 .login-form {position:relative; z-index:2;}
 .login-form h1 {
-    font-size: 32px;
+    font-size: 36px;
+    font-weight: 500;
     text-align: center;
     margin-bottom: 60px;
+    color: #d67331;
 }
 .int-area {
     width:400px;
@@ -103,33 +105,34 @@ button{
     background-color: transparent;
     border:none;
     border-bottom: 1px solid #000;;
-    font-size: 18px; color:#000;
+    font-size: 30px;
+    color: #482727;
     outline: none;
 }
 .int-area label{
     position: absolute; left: 10px; top:15px;
-    font-size: 18px;
-    color: #999;
+    font-size: 30px;
+    color: #c6b48d;
     /* 클릭시 글씨 0.5s 속도 주기 */
     transition: all .5s ease; 
 }
 
 .int-area label.warning {
-    color: red !important;
+    color: rgb(255, 65, 65) !important;
     animation: warning .3s ease;
     animation-iteration-count: 3;
 }
 
 @keyframes warning {
-    0% {transform: translateX(-8px);}
-    25% {transform: translateX(8px);}
-    50% {transform: translateX(-8px);}
-    75% {transform: translateX(8px);}
+    0% {transform: translateX(-7px);}
+    25% {transform: translateX(7px);}
+    50% {transform: translateX(-7px);}
+    75% {transform: translateX(7px);}
 }
 .int-area input:focus + label,
 .int-area input:valid + label {
     top:0;
-    font-size: 13px; color: #e7b510;
+    font-size: 20px; color: #e7b510;
 }
 .btn-area {
     margin-top: 30px;
@@ -151,7 +154,7 @@ button{
 }
 
 .caption a {
-    font-size: 15px;
-    color: #000;
+    font-size: 21px;
+    color: #535353;
     text-decoration: none;
 }
