--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+.low {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.colum {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -5,7 +17,7 @@
   font-family: "PT Sans", sans-serif;
 }
 .App {
-  max-width: 1500px;
+  text-align: center;
 }
 .home,
 .BoardInsert,
