--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -69,7 +69,7 @@ button{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: white no-repeat center;
+    background: #fefff9 no-repeat center;
     background-size: cover;
 }
 
