--- a/src/components/HBBoardListItem.css
+++ b/src/components/HBBoardListItem.css
@@ -1,9 +1,9 @@
 .hbBoardListItem {
-  width: 500px;
-  height: 300px;
-  background-color: rgb(184, 184, 184);
+  width: 340px;
+  height: 415px;
   display: inline-block;
   margin: 5px;
+  border-radius: 7px;
 }
 
 .hbBoardListItem * {
@@ -12,5 +12,68 @@
 .hbBoardItem {
   height: 100%;
   width: 100%;
-  color: white;
+  color: black;
+}
+
+.hbFeelIcon {
+  height: 170px;
+}
+
+.hbFeelIcon > img {
+  height: 130px;
+  margin-top: 30px;
+}
+
+.hbContents {
+  height: 250px;
+  padding: 27px 30px 0 30px;
+}
+
+.hbContents > h3 {
+  font-size: 20px;
+}
+
+/* 색상 */
+.glad {
+  background-color: rgb(248, 245, 90);
+}
+
+.happy {
+  background-color: rgb(255, 205, 234);
+}
+
+.proud {
+  background-color: rgb(197, 240, 240);
+}
+
+.calm {
+  background-color: rgb(141, 218, 106);
+}
+
+.unrest {
+  background-color: rgb(145, 122, 74);
+}
+
+.sad {
+  background-color: rgb(78, 98, 165);
+}
+
+.depressed {
+  background-color: rgb(178, 123, 204);
+}
+
+.tired {
+  background-color: rgb(148, 148, 148);
+}
+
+.dissatisfaction {
+  background-color: rgb(255, 157, 65);
+}
+
+.angry {
+  background-color: rgb(255, 91, 112);
+}
+
+.special {
+  background-color: rgb(255, 230, 0);
 }
