--- a/src/components/BoardDetail.css
+++ b/src/components/BoardDetail.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap");
+
 .bTitleBox {
   background: #fff7b0;
   height: 350px;
@@ -7,6 +9,7 @@
 .bTitle > h1 {
   font-weight: 600;
   font-size: 40px;
+  font-family: "Gowun Dodum", sans-serif;
 }
 
 .bTitle {
@@ -25,6 +28,7 @@
   top: 69%;
   left: 26%;
   text-align: left;
+  font-family: "Gowun Dodum", sans-serif;
 }
 
 .bContent {
@@ -32,4 +36,6 @@
   margin: 0 auto;
   padding: 60px 0;
   font-size: 18px;
+  font-family: "Gowun Dodum", sans-serif;
+  line-height: 35px;
 }
