--- a/src/components/HBBoardListItem.css
+++ b/src/components/HBBoardListItem.css
@@ -13,6 +13,9 @@
   height: 100%;
   width: 100%;
   color: black;
+  overflow: hidden;
+  padding-top: 65px;
+  transition: all 0.4s;
 }
 
 .hbFeelIcon {
@@ -34,14 +37,24 @@
 }
 
 .hbText {
-  margin: 15px 0;
+  margin: 23px 0;
+  height: 100px;
+  opacity: 0;
 }
 
 .hbInfo {
+  display: flex;
+  justify-content: space-between;
+  opacity: 0;
 }
 
-.hbBRD {
+.hbBoardListItem:hover .hbText,
+.hbBoardListItem:hover .hbInfo {
+  opacity: 1;
+  transition: all 0.6s;
 }
 
-.hbFT {
+.hbBoardListItem:hover .hbBoardItem {
+  padding-top: 0px;
+  transition: all 0.6s;
 }
