--- a/src/components/HBBoardDetail.css
+++ b/src/components/HBBoardDetail.css
@@ -5,12 +5,14 @@
   width: 630px;
   box-shadow: 6px 7px 5px 1px #e7e7e7;
   padding: 25px 0;
+  min-height: 700px;
 }
 
 .hbBDetailLine {
   border: solid 4px white;
   width: 570px;
   margin: 0 auto;
+  min-height: 700px;
 }
 
 .hbBTitle > h1 {
@@ -34,6 +36,7 @@
 
 .hbBContentBox {
   padding: 30px 0;
+  min-height: 560px;
 }
 
 .hbBContent {
