--- a/src/components/Join.css
+++ b/src/components/Join.css
@@ -1,5 +1,5 @@
 .joinAllForm {
-    background-color: white;
+    background-color: #fefff9;
     display: flex;
     justify-content: center;
 }
@@ -9,7 +9,7 @@
     margin-left: 25%;
     margin-right: 25%;
     height: 905px;
-    box-shadow: 1px 1px 3px 2px #e2e2e2;
+    /* box-shadow: 1px 1px 3px 2px #e2e2e2; */
     width: 600px;
     display: flex;
     justify-content: center;
