--- a/src/components/HBCreate2.css
+++ b/src/components/HBCreate2.css
@@ -1,15 +1,17 @@
+ @import url(https://fonts.googleapis.com/css?family=Signika:700,300,600);
 
-.h1title {
+
+.cardTitle > h1 {
  font-size:5em;
- font:bold 6.5vw/1.6 'Signika', sans-serif;
+ font:bold 4vw/1.6 'Signika', sans-serif;
  user-select:none;
 }
 
-.h1title span { display:inline-block; animation:float .5s ease-in-out infinite; }
+.cardTitle > h1 span { display:inline-block; animation:float .7s ease-in-out infinite; }
  @keyframes float {
   0%,100%{ transform:none; }
-  33%{ transform:translateY(-1px) rotate(-2deg); }
-  66%{ transform:translateY(1px) rotate(2deg); }
+  33%{ transform:translateY(-1px) rotate(1deg); }
+  66%{ transform:translateY(1px) rotate(1deg); }
 }
 body:hover span { animation:bounce .6s; }
 @keyframes bounce {
@@ -18,28 +20,32 @@ body:hover span { animation:bounce .6s; }
   50%{ transform:translateY(-20px) rotate(3deg) scale(1.1);  }
 }
 
-span:nth-child(4n) {     color: #ffcbcb;
-    text-shadow: 1px 1px 2px #eb6383; }
-span:nth-child(4n-1) {     color: #ffcbcb;
-    text-shadow: 1px 1px 2px #eb6383;}
-span:nth-child(4n-2) {     color: #ffcbcb;
-    text-shadow: 1px 1px 2px #eb6383; }
-span:nth-child(4n-3) {     color: #ffcbcb;
-    text-shadow: 1px 1px 2px #eb6383; }
+span:nth-child(4n) {     color: #000000;
+   
+} 
+span:nth-child(4n-1) {     color: hsl(0deg 0% 0%);
+   
+}
+span:nth-child(4n-2) {     color: hsl(0deg 0% 0%);
+   
+}
+span:nth-child(4n-3) {     color: hsl(0deg 0% 0%);
+    
+}
 
-.h1title span:nth-child(2){ animation-delay:.05s; }
-.h1title span:nth-child(3){ animation-delay:.1s; }
-.h1title span:nth-child(4){ animation-delay:.15s; }
-.h1title span:nth-child(5){ animation-delay:.2s; }
-.h1title span:nth-child(6){ animation-delay:.25s; }
-.h1title span:nth-child(7){ animation-delay:.3s; }
-.h1title span:nth-child(8){ animation-delay:.35s; }
-.h1title span:nth-child(9){ animation-delay:.4s; }
-.h1title span:nth-child(10){ animation-delay:.45s; }
-.h1title span:nth-child(11){ animation-delay:.5s; }
-.h1title span:nth-child(12){ animation-delay:.55s; }
-.h1title span:nth-child(13){ animation-delay:.6s; }
-.h1titlespan:nth-child(14){ animation-delay:.65s; }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -50,14 +56,14 @@ span:nth-child(4n-3) {     color: #ffcbcb;
 
 .card {
     position: absolute;
-    top: 50%;
+    top: 600px;
     left: 50%;
     transform: translate(-50%,-50%);
     width: 900px;
     height: 900px;
-    background: #262626;
+    background: #fefff9;
     overflow: hidden;
-    margin-top: 335px;
+    margin-top: 255px;
 }
 .card .imgBx,
 .card .details {
