--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@ body * {
 .App {
   text-align: center;
 }
+
 .home,
 .BoardInsert,
 .HBOpen,
@@ -58,4 +59,11 @@ body * {
   background-repeat: no-repeat;
   color: #fff;
   font-size: 100px;
+}
+
+.footer .linkBox {
+  opacity: 0;
+}
+.footer :hover {
+  opacity: 1;
 }
