--- a/src/components/BoardListItem.css
+++ b/src/components/BoardListItem.css
@@ -45,21 +45,25 @@
 .bText {
   margin: 9px 0 33px 0;
   height: 68px;
-  /* opacity: 0; */
+  opacity: 0;
   display: flex;
   align-items: center;
 }
 
+.bText p {
+  width: 100%;
+}
+
 .bWriterInfo {
-  /* opacity: 0; */
   padding: 10px;
 }
 
 .bDateInfo {
+  opacity: 0;
 }
 
 .boardListItem:hover .bText,
-.boardListItem:hover .bWriterInfo {
+.boardListItem:hover .bDateInfo {
   opacity: 1;
   transition: all 0.6s;
 }
