게시글 수정, 배너 추가, 스크롤 시 메뉴 수정중

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap");
 
+body {
+  background-color: #fefff9;
+}
+
 body * {
   font-family: "Gowun Dodum", sans-serif;
 }
