--- a/src/components/BoardListItem.css
+++ b/src/components/BoardListItem.css
@@ -1,18 +1,21 @@
 .boardListItem {
-  width: 340px;
-  height: 415px;
+  width: 870px;
+  height: 200px;
   display: inline-block;
   margin: 13px;
   border-radius: 7px;
-  box-shadow: 6px 7px 5px 1px #e7e7e7;
+  box-shadow: 2px 2px 5px 1px #e7e7e7;
+  background: white;
 }
 
 .boardListItem * {
   text-decoration: none;
+  text-align: left;
 }
 
 .boardListItem:hover {
-  box-shadow: 6px 7px 5px 1px #d4d1d1;
+  box-shadow: 2px 2px 5px 1px #d4d1d1;
+  transition: all 0.6s;
 }
 
 .boardItem {
@@ -20,32 +23,38 @@
   width: 100%;
   color: black;
   overflow: hidden;
-  padding-top: 65px;
   transition: all 0.4s;
+  position: relative;
 }
 
 .bFeelIcon {
-  height: 170px;
+  height: 200px;
+  position: absolute;
+  border-top-left-radius: 7px;
+  border-bottom-left-radius: 7px;
+  width: 200px;
 }
 
 .bFeelIcon > img {
   height: 130px;
-  margin-top: 30px;
+  margin: 34px 26px 5px 36px;
 }
 
 .bContents {
   height: 250px;
-  padding: 27px 30px 0 30px;
+  padding: 27px 30px 0 40px;
+  position: absolute;
+  left: 200px;
 }
 
 .bTitle > h3 {
   font-size: 20px;
+  display: inline-block;
 }
 
 .bText {
   margin: 9px 0 33px 0;
   height: 68px;
-  opacity: 0;
   display: flex;
   align-items: center;
 }
@@ -55,20 +64,11 @@
 }
 
 .bWriterInfo {
-  padding: 10px;
+  padding: 10px 0 10px 15px;
+  display: inline-block;
+  color: #818181;
 }
 
 .bDateInfo {
   opacity: 0;
-}
-
-.boardListItem:hover .bText,
-.boardListItem:hover .bDateInfo {
-  opacity: 1;
-  transition: all 0.6s;
-}
-
-.boardListItem:hover .boardItem {
-  padding-top: 0px;
-  transition: all 0.6s;
 }
