--- a/src/components/IndexNav.css
+++ b/src/components/IndexNav.css
@@ -1,5 +1,5 @@
 .navbar {
-  height: 80px;
+  height: 420px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,6 +8,13 @@
   top: 0;
   z-index: 999;
   color: #e39764;
+  background-image: url("/public/img/Banner.png");
+  background-size: cover;
+  transition: all 0.4s;
+}
+
+.scrollNav {
+  height: 80px;
 }
 
 .navbar-container {
@@ -57,8 +64,6 @@
   text-decoration: none;
   padding: 0.5rem 1rem;
   height: 100%;
-
-  
 }
 
 /* .nav-links:hover {
@@ -153,7 +158,7 @@
     text-decoration: none;
     font-size: 1.5rem;
     background: rgb(234 177 137);
-    
+
     color: rgb(255 255 255);
     padding: 14px 20px;
     border: 1px solid rgb(255, 255, 255);
