메뉴 수정, 행복저금통게시글 수정

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@ body * {
   font-family: "Gowun Dodum", sans-serif;
 }
 
+.navMargin {
+  height: 500px;
+}
+
 .low {
   display: flex;
   flex-direction: row;
