--- a/src/components/IndexNav.css
+++ b/src/components/IndexNav.css
@@ -1,16 +1,16 @@
 .navbar {
   height: 420px;
+  width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
   font-size: 1.2rem;
-  position: sticky;
   top: 0;
   z-index: 999;
   color: #e39764;
   background-image: url("/public/img/Banner.png");
   background-size: cover;
-  transition: all 0.4s;
+  transition: all 0.2s;
+  position: fixed;
 }
 
 .scrollNav {
