--- a/src/components/HBBoardListItem.css
+++ b/src/components/HBBoardListItem.css
@@ -56,3 +56,17 @@
 .hbBoardListItem:hover .hbContents {
   opacity: 1;
 } */
+
+.modal {
+  position: absolute;
+  inset: 40px;
+  border: 1px solid rgb(204, 204, 204);
+  background: rgb(255, 255, 255);
+  overflow: auto;
+  border-radius: 4px;
+  outline: none;
+  padding: 20px;
+  width: 200px;
+  height: 200px;
+  top: 180px;
+}
