--- a/src/components/IndexNav.css
+++ b/src/components/IndexNav.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Gowun+Batang&display=swap");
 
 .navbar {
-  height: 420px;
+  height: 69px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -15,15 +15,15 @@
   position: fixed;
 }
 
-.scrollNav {
+/* .scrollNav {
   height: 80px;
-}
+} */
 
 .navbar-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80px;
+  height: 69px;
   max-width: 1500px;
   border-bottom: #242222;
 }
