배너이미지, 리스트아이템

--- a/src/components/HBUpdate.css
+++ b/src/components/HBUpdate.css
@@ -1,38 +1,52 @@
 .hbUp {
   padding: auto;
-  background-color: #fefff9;
+  margin-top: 50px;
+}
+
+.hbUpForm {
+  width: 400px;
+  height: 600px;
+  background-image: url("/public/img/binHB.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
 }
 
 .hbUp input[type="text"] {
-  width: 420px;
-  height: 100px;
+  width: 300px;
+  height: 70px;
   border: 0;
-  box-shadow: 0px 0px 4px 3px #f4f4f4;
+  box-shadow: 0px 0px 4px 3px #c5c5c5;
   text-align: center;
   font-size: 50px;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 330px;
+  margin-bottom: 200px;
 }
 
-.hbUp .btn1 {
+.hbUpForm table {
+  margin-top: 30px;
+}
+.hbUp .btn_1 {
   width: 200px;
-  height: 100px;
+  height: 50px;
   border: 0;
-  font-size: 45px;
+  font-size: 25px;
   border-radius: 5px;
   background: #f6a89e;
   color: white;
   font-weight: 500;
 }
 
-.hbUp .btn2 {
-  display: inline; /*옆으로 같이 나오게*/
+.hbUp .btn_2 {
   width: 200px;
-  height: 100px;
+  height: 50px;
   border: 0;
-  font-size: 45px;
+  font-size: 25px;
   border-radius: 5px;
   background: #cfcfcf;
   color: white;
   font-weight: 500;
+  padding: -14px -20px;
 }
