--- a/src/components/BoardInsert.css
+++ b/src/components/BoardInsert.css
@@ -1,142 +1,110 @@
-.bTitleInput{
-    width: 1000px;
-    height: 100px;
-    
-    font-size: 30px;
-    padding-left: 27px;
-    border: none;
-    outline: none;
-    border-bottom: 1px solid rgba(0,0,0,.05);
+.bTitleInput {
+  width: 1000px;
+  height: 100px;
+
+  font-size: 30px;
+  padding-left: 27px;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 }
 
 .boardInsertForm {
-    display: flex;
-    justify-content: center;
-    
+  display: flex;
+  justify-content: center;
 }
 
-.bContentInput{
-    width: 1000px;
-    height: 700px;
-    border: none;
-    outline: none;
+.bContentInput {
+  width: 1000px;
+  height: 700px;
+  border: none;
+  outline: none;
 }
 
-.bContentText{
-    width: 1000px;
-    height: 700px;
-    border: none;
-    outline: none;
-    resize: none;
-    padding-top: 33px;
-    padding-left: 27px;
-    font-size: 27px;
+.bContentText {
+  width: 1000px;
+  height: 700px;
+  border: none;
+  outline: none;
+  resize: none;
+  padding-top: 33px;
+  padding-left: 27px;
+  font-size: 27px;
 }
 
-.insertAllForm > h3{
-    margin-bottom: 64px;
-    font-size: 37px;
-    margin-right: 890px;
+.insertAllForm > h3 {
+  margin: 64px 0 25px 0;
+  font-size: 37px;
+  margin-right: 890px;
 }
 
 label > img {
-    width: 77px;
+  width: 77px;
 }
 
-label {color: blue;}
-label:checked {color: red;}
-input[type="radio"]:checked + label {color: red;}
-
-.titleEmotion > h3{
-    height: 38px;
-    font-size: 26px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    font-weight: 400;
+.titleEmotion > h3 {
+  height: 38px;
+  font-size: 26px;
+  margin-top: 20px;
+  margin-bottom: 55px;
+  font-weight: 400;
 }
-.insertSubmit{
-    float: right;
-    width: 100px;
-    height: 80px;
-    font-size: 28px;
-    border: none;
-    background: #e9e9e9;
-    color: #767676;
-    font-weight: 700;
-    margin-top: 11px;
-    border-radius: 13px;
+.insertSubmit {
+  float: right;
+  width: 100px;
+  height: 80px;
+  font-size: 28px;
+  border: none;
+  background: #e9e9e9;
+  color: #767676;
+  font-weight: 700;
+  margin-top: 11px;
+  border-radius: 13px;
 }
-.memEmailInput{
-    display: none;
+.memEmailInput {
+  display: none;
 }
 
-.Emotion1 > input[type='radio']{
-    /* position: absolute; */
-    /* background-color: brown; */
-    /* height: 60px;
-    margin-left: -40px;
-    margin-top: -8px;
-    width: 60px; */
-    /* background: black; */
-    /* color: azure; */
-    /* opacity: 0%; */
-
-    /* position: absolute; */
-    /* background-color: brown; */
-    /* background: black; */
-    border-bottom: 1px solid rgb(255 0 0 / 5%);
-    /* color: azure; */
-    /* opacity: 0%; */
-    /* margin-left: 16px; */
-    /* border: none; */
-    position: absolute;
-    /* background-color: brown; */
-    border: 3px solid rgb(241 241 241);
-    height: 60px;
-    margin-left: -89px;
-    margin-top: -13px;
-    width: 60px;
-    /* background: black; */
-    /* color: azure; */
-    opacity: 0%;
-    /* background-color: rgb(255 120 0); */
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    /* margin-left: 16px; */
-    /* border: none; */
-    width: 100px;
-    height: 101px;
-    border-radius: 100%;
-    box-shadow: 0px 0px 6px 3px #f9f9f9;
-
-    box-shadow: 0px 0px 2px 1px #fd942c;
-    border: 2px solid rgb(255 106 0 / 54%);
+.Emotion1 {
+  margin-bottom: 25px;
 }
 
-.Emotion1 > input[type="radio"] + label{
-    display: inline-block;
+.Emotion1 > input[type="radio"] {
+  border-bottom: 1px solid rgb(255 0 0 / 5%);
+  position: absolute;
+  margin-left: -89px;
+  margin-top: -13px;
+  opacity: 0%;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 100px;
+  height: 101px;
+  border-radius: 100%;
+  box-shadow: 0px 0px 2px 1px #fd942c;
+  border: 2px solid rgb(255 106 0 / 54%);
+  transition: all 0.4s;
 }
 
-.Emotion1 > input[type="radio"] + label::before{
-    display: inline-block;
-    content: "";
-    width: 20px;
-    height: 20px;
-    /* background: rgb(255, 255, 255) no-repeat; */
-    background-size: 20px;
-    vertical-align: top;
-    margin: -4px 5px 0 0;
-    border-radius: 50px;
-    
-    
-    
+.Emotion1 > input[type="radio"] + label {
+  display: inline-block;
+}
+
+.Emotion1 > input[type="radio"] + label::before {
+  display: inline-block;
+  content: "";
+  width: 20px;
+  height: 20px;
+  /* background: rgb(255, 255, 255) no-repeat; */
+  background-size: 20px;
+  vertical-align: top;
+  margin: -4px 5px 0 0;
+  border-radius: 50px;
 }
 
 .Emotion1 > input[type="radio"]:checked {
-    opacity: 90%;
-    
+  opacity: 90%;
 }
 
-.Emotion1 > input[type="radio"]:checked label > img{
-    font-size: 100px;
+.Emotion1 > input[type="radio"]:checked label > img {
+  font-size: 100px;
 }
