--- a/src/components/HBList.css
+++ b/src/components/HBList.css
@@ -43,7 +43,7 @@ section h1 {
 }
 
 .btn1 {
-  width: 200px;
+  width: 150px;
   height: 50px;
   border: 0;
   font-size: 25px;
@@ -53,6 +53,17 @@ section h1 {
   font-weight: 500;
 }
 
+.btn2 {
+  width: 70px;
+  height: 50px;
+  line-height: 50px;
+  border: 0;
+  font-size: 25px;
+  border-radius: 5px;
+  background: #f6a89e;
+  color: white;
+  font-weight: 500;
+}
 /* 애니메이션 */
 .hb:hover {
   animation-name: tossing;
