--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -22,6 +22,8 @@
   padding: 8px 20px;
   border: 1px solid black;
   transition: all 0.3s ease-out;
+  font-weight: bold;
+  border-radius: 5px;
 }
 
 .btn-medium {
