--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,9 @@ body * {
 }
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .home,
@@ -69,9 +72,14 @@ body * {
   font-size: 100px;
 }
 
+.footer {
+  margin-top: auto;
+}
+
 .footer .linkBox {
   opacity: 0;
 }
+
 .footer :hover {
   opacity: 1;
 }
