--- a/src/components/IntroduceIcon.css
+++ b/src/components/IntroduceIcon.css
@@ -1,6 +1,5 @@
 .iconBox {
   background: #fff3f3;
-  padding-bottom: 23px;
 }
 
 .iconBox img {
@@ -67,4 +66,19 @@
 .dailyLifeIntro > img {
   width: 58%;
   margin-bottom: 180px;
+}
+
+.footerInfo {
+  background: #fee5e5;
+  height: 140px;
+}
+
+.footerInfo h2 {
+  padding: 30px 0 15px 0;
+}
+
+.teamInfo > span > a {
+  text-decoration: none;
+  color: black;
+  margin: 0 10px;
 }
